--- a/color_change/index.html
+++ b/color_change/index.html
@@ -21,6 +21,6 @@
   </div>
   </div>
 </div>
-    <script src=file:///C:/Users/domin/github/tutorials_1/Projects/color_change/scipt.js></script>
+    <script src=scipt.js></script>
   </body>
 </html>
