--- a/quotes/index.html
+++ b/quotes/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css" style="text/css">
+    <link rel="stylesheet" href="style.css">
     <title></title>
   </head>
   <body>
@@ -14,6 +14,6 @@
 
       </div>
 
-    <script src=file:///C:/Users/domin/github/tutorials_1/Projects/quotes/scipt.js></script>
+    <script src=script.js></script>
   </body>
 </html>
